@@ -40,6 +40,7 @@ Bug fixes
  * Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
  * Accept unicode characters in slugs on the "copy page" form (François Poulain)
  * Support IPv6 domain (Alex Gleason, Coen van der Kamp)
+ * Remove top padding when `FieldRowPanel` is used inside a `MultiFieldPanel` (Jérôme Lebleu)
 
 
 Upgrade considerations
