@@ -26,6 +26,7 @@ Changelog
  * Fix: Removed ARIA `role="table"` from TableBlock output (Thibaud Colas)
  * Fix: Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
  * Fix: Accept unicode characters in slugs on the "copy page" form (François Poulain)
+ * Fix: Remove top padding when ``FieldRowPanel`` is used inside a ``MultiFieldPanel`` (Jérôme Lebleu)
 
 
 2.9 (04.05.2020)
